--- a/floridaimportdotnet/ClientApp/src/app/florida/ingreso/ingreso.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/ingreso/ingreso.component.html
@@ -2,18 +2,17 @@
 
   <div class="row">
   
-  <div class="col-md-6 offset-md-3">
+  <div class="col-md-6 offset-md-3 card border-success">
   
-  <h2 class="text-success" id="PaddingText">Registro de Clientes</h2>
-  
+    <div class="header">
+      <h2 class="text-success title" >Login</h2>
+    </div>
   <form [formGroup]="formGroup" id="Padding">
   
   <div class="form-group">
-  
-      <label>Correo</label>
       
       <input type="email" name="correo" formControlName="correo" class="form-control border border-success" 
-      placeholder="email@example.com" [ngClass]="{ 'is-invalid': control.correo.errors && formGroup.get('correo').touched}"/>
+      placeholder="email" [ngClass]="{ 'is-invalid': control.correo.errors && formGroup.get('correo').touched}"/>
 
       <div *ngIf="control.correo.errors" class="invalid-feedback">
 
@@ -25,8 +24,6 @@
    </div>
 
    <div class="form-group">
-  
-    <label>Contraseña</label>
     
     <input type="password" name="contrasena" formControlName="contrasena" class="form-control border border-success" 
     placeholder="Contraseña" [ngClass]="{ 'is-invalid': control.contrasena.errors && formGroup.get('contrasena').touched}"/>
@@ -42,7 +39,7 @@
 
   <div class="text-center">
       
-  <button class="btn btn-success mr-1"(click)="get()" [disabled]="formGroup.invalid">Ingresar</button>
+  <button class="btn btn-success mr-1"(click)="acceder()" [disabled]="formGroup.invalid">Ingresar</button>
   
   <button class="btn btn-secondary" type="reset">Cancel</button>
   
