--- a/floridaimportdotnet/ClientApp/src/app/florida/cliente-registro/cliente-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/cliente-registro/cliente-registro.component.html
@@ -99,16 +99,33 @@
    <div class="form-group">
   
     <label>Contraseña</label>
-    
-    <input type="password" name="contrasena" formControlName="contrasena" class="form-control border border-success" 
+    <div class="input-group">
+    <input type="{{tipo}}" name="contrasena" formControlName="contrasena" class="form-control border border-success col" 
     placeholder="Contraseña" [ngClass]="{ 'is-invalid': control.contrasena.errors && formGroup.get('contrasena').touched}"/>
-
-      <div *ngIf="control.contrasena.errors" class="invalid-feedback">
-
-        <div *ngIf="control.contrasena.errors.required">Se require la contraseña</div>
-        <div *ngIf="control.contrasena.errors.minLength">La contraseña debe contener minimo 8 caracteres</div>
-        <div *ngIf="control.contrasena.errors.maxLength">La contraseña debe contener maximo 20 caracteres</div>
+    <div class="input-group-btn">
+    <button class="btn btn-white border border-success" width="1em" height="1.5em" (click)="ver()">
+      <div *ngIf="verCon==false">
+      <svg class="bi bi-eye-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path d="M10.5 8a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z"/>
+        <path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 100-7 3.5 3.5 0 000 7z" clip-rule="evenodd"/>
+      </svg>
       </div>
+      <div *ngIf="verCon==true">
+        <svg class="bi bi-eye-slash-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10.79 12.912l-1.614-1.615a3.5 3.5 0 01-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 002.79-.588zM5.21 3.088A7.028 7.028 0 018 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 00-4.474-4.474L5.21 3.089z"/>
+          <path d="M5.525 7.646a2.5 2.5 0 002.829 2.829l-2.83-2.829zm4.95.708l-2.829-2.83a2.5 2.5 0 012.829 2.829z"/>
+          <path fill-rule="evenodd" d="M13.646 14.354l-12-12 .708-.708 12 12-.708.708z" clip-rule="evenodd"/>
+        </svg>
+      </div>
+    </button>
+    <div *ngIf="control.contrasena.errors" class="invalid-feedback">
+
+      <div *ngIf="control.contrasena.errors.required">Se require la contraseña</div>
+      <div *ngIf="control.contrasena.errors.minLength">La contraseña debe contener minimo 8 caracteres</div>
+      <div *ngIf="control.contrasena.errors.maxLength">La contraseña debe contener maximo 20 caracteres</div>
+    </div>
+    </div>
+    </div>
     
  </div>
 
