--- a/floridaimportdotnet/ClientApp/src/app/florida/ingreso/ingreso.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/ingreso/ingreso.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
   
-  <div class="col-md-6 offset-md-3 card border-success">
+  <div class="col-md-4 offset-md-3 card border-success padding margen justify-content-center" >
   
     <div class="header">
       <h2 class="text-success title" >Login</h2>
