--- a/floridaimportdotnet/ClientApp/src/app/home/home.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/home/home.component.html
@@ -1,3 +1,23 @@
+<div *ngIf="rol=='Admin'; else noAdmin">
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">Dashboard</h1>
+        <div class="btn-toolbar mb-2 mb-md-0">
+          <div class="btn-group mr-2">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+          </div>
+          <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+            <span data-feather="calendar"></span>
+            This week
+          </button>
+        </div>
+      </div>
+
+      <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+    </main>
+  </div>
+<ng-template #noAdmin>
 <ngb-carousel class="carrusel">
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
@@ -51,6 +71,7 @@
   <hr>
 
 </div> <!-- /container -->
+</ng-template>
 
 <footer class="container">
   <p>&copy; Company 2017-2019</p>
