--- a/floridaimportdotnet/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,10 +1,13 @@
 <header>
-  <nav
-    class="navbar navbar-expand-lg navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-success box-shadow mb-3"
+  <!--Administrador-->
+  <div *ngIf="rol=='Admin'; else noAdmin">
+
+    <nav
+    class="navbar navbar-expand-lg navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-success box-shadow "
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
-        <img src="../../assets/icons8-uva.png" width="120" class="rounded-circle mr-3 d-block mx-auto text-center">
+        <p class="text-white">Florida Import</p>
       </a>
       <button
         class="navbar-toggler"
@@ -19,7 +22,134 @@
       </button>
 
       <div
-        class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse row"
+        class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse justify-content-center"
+        [ngClass]="{ show: isExpanded }" 
+      >
+
+        <ul class="navbar-nav flex-grow margen">
+
+        <li ngbDropdown class="nav-item">
+          <a href (click)="false" class="nav-link text-white" ngbDropdownToggle>
+            <svg class="bi bi-bell" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8 16a2 2 0 002-2H6a2 2 0 002 2z"/>
+              <path fill-rule="evenodd" d="M8 1.918l-.797.161A4.002 4.002 0 004 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 00-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 111.99 0A5.002 5.002 0 0113 6c0 .88.32 4.2 1.22 6z" clip-rule="evenodd"/>
+            </svg>
+          </a>
+          <div ngbDropdownMenu class="border border-success">
+              <a class="dropdown-item text-success" ></a>
+              <a class="dropdown-item text-success" ></a>
+              <a class="dropdown-item text-success" ></a>
+          </div>
+        </li>
+        <li ngbDropdown class="nav-item">
+          <a href (click)="false" class="nav-link text-white letra" ngbDropdownToggle>
+            <svg class="bi bi-people-circle" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 008 15a6.987 6.987 0 005.468-2.63z"/>
+              <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+              <path fill-rule="evenodd" d="M8 1a7 7 0 100 14A7 7 0 008 1zM0 8a8 8 0 1116 0A8 8 0 010 8z" clip-rule="evenodd"/>
+            </svg>
+            {{nombre}}</a>
+          <div ngbDropdownMenu class="border border-success">
+              <a class="dropdown-item text-success"  [routerLink]="['/clienteRegistro']">Mi cuenta</a>
+              <a class="dropdown-item text-success" (click)="salir()" onclick="location.reload()">Salir</a>
+          </div>
+        </li>
+      </ul>
+      <div class="input-group">
+        <input class="form-control p text-success span2" id="input-search" type="search" placeholder="¿Que estas buscando?">
+        
+      </div>
+      </div>
+    </div>
+    </nav> 
+    <nav
+    class="navbar navbar-expand-lg navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-success box-shadow mb-3"
+  >
+    <div class="container">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target=".navbar-collapse"
+        aria-label="Toggle navigation"
+        [attr.aria-expanded]="isExpanded"
+        (click)="toggle()"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div
+        class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse justify-content-center letra"
+        [ngClass]="{ show: isExpanded }" 
+      >
+
+        <ul class="navbar-nav flex-grow margen justify-content-center">
+
+        <li ngbDropdown class="nav-item">
+          <a href (click)="false" class="nav-link text-success" ngbDropdownToggle>
+            Cliente
+          </a>
+          <div ngbDropdownMenu class="border border-success">
+              <a class="dropdown-item text-success" [routerLink]="['/clienteConsulta']">Consultar</a>
+              <a class="dropdown-item text-success" [routerLink]="['/clienteRegistro']">Registrar</a>
+          </div>
+        </li>
+        <li ngbDropdown class="nav-item">
+          <a href (click)="false" class="nav-link text-success" ngbDropdownToggle>
+            Proveedor
+          </a>
+          <div ngbDropdownMenu class="border border-success">
+              <a class="dropdown-item text-success" [routerLink]="['/proveedorConsulta']">Consultar</a>
+              <a class="dropdown-item text-success" [routerLink]="['/proveedorRegistro']">Registrar</a>
+          </div>
+        </li>
+        <li ngbDropdown class="nav-item">
+          <a href (click)="false" class="nav-link text-success" ngbDropdownToggle>
+            Productos
+          </a>
+          <div ngbDropdownMenu class="border border-success">
+              <a class="dropdown-item text-success" [routerLink]="['/productoConsulta']">Consultar</a>
+              <a class="dropdown-item text-success" [routerLink]="['/productoRegistro']">Registrar</a>
+          </div>
+        </li>
+        <li ngbDropdown class="nav-item">
+          <a href (click)="false" class="nav-link text-success" ngbDropdownToggle>
+            Informes
+          </a>
+          <div ngbDropdownMenu class="border border-success">
+              <a class="dropdown-item text-success" [routerLink]="['/clienteConsulta']">Inventario</a>
+              <a class="dropdown-item text-success" [routerLink]="['/clienteRegistro']">Ventas por mes</a>
+          </div>
+        </li>
+      </ul>
+      </div>
+    </div>
+    </nav>       
+    
+  </div>
+  <!--No es Administrador-->
+  <ng-template #noAdmin>
+  <nav
+    class="navbar navbar-expand-lg navbar-expand-sm navbar-toggleable-sm navbar-light bg-success border-success box-shadow mb-3"
+  >
+    <div class="container">
+      <a class="navbar-brand" [routerLink]="['/']">
+        <p class="text-white">Florida Import</p>
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target=".navbar-collapse"
+        aria-label="Toggle navigation"
+        [attr.aria-expanded]="isExpanded"
+        (click)="toggle()"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div
+        class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse row justify-content-center"
         [ngClass]="{ show: isExpanded }" 
       >
 
@@ -62,11 +192,11 @@
       </div>
       <div>
       <ul class="navbar-nav flex-grow">
-      
-        <div *ngIf="rol=='Clien'; else noClien" class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse nav justify-content-center row"
+        <!--Cliente-->
+        <div *ngIf="rol=='Clien'" class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse nav justify-content-center row"
         [ngClass]="{ show: isExpanded }">
         <li ngbDropdown class="nav-item">
-          <a href (click)="false" class="nav-link text-white" ngbDropdownToggle>
+          <a href (click)="false" class="nav-link text-white letra" ngbDropdownToggle>
             <svg class="bi bi-people-circle" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 008 15a6.987 6.987 0 005.468-2.63z"/>
               <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
@@ -74,7 +204,7 @@
             </svg>
             {{nombre}}</a>
           <div ngbDropdownMenu class="border border-success">
-              <a class="dropdown-item text-success"  [routerLink]="['/clienteRegistro']">Mi cuenta</a>
+              <a class="dropdown-item text-success"  [routerLink]="['/personaPerfil']">Perfil</a>
               <a class="dropdown-item text-success" (click)="salir()">Salir</a>
           </div>
         </li>
@@ -89,7 +219,9 @@
             >
           </li>
         </div>
-        <ng-template #noClien>
+        <!--Sin ingreso-->
+        <div *ngIf="rol===null" class="navbar-nav navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse nav justify-content-center row"
+        [ngClass]="{ show: isExpanded }">
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-white letra" [routerLink]="['/clienteRegistro']"
               >Crea tu cuenta</a
@@ -105,11 +237,13 @@
               >Compras</a
             >
           </li>
-        </ng-template>
+        </div>
         </ul>
     </div>
     </div>
   </nav>
+</ng-template>
 </header>
+
 
 
