Se agrega: filtro para la consyulta de los productos, perfil de usuario, editar cliente, entre otros.

--- a/floridaimportdotnet/ClientApp/src/app/florida/cliente-consulta/cliente-consulta.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/cliente-consulta/cliente-consulta.component.html
@@ -52,6 +52,8 @@
 
     <td>{{ cliente.correo }}</td>
 
+    <td> <a routerLink='/clienteEliminar/{{cliente.identificacion}}'>  ver </a></td>
+
     </tr>
     
     </tbody>
