Se agrega: Registro y consulta de proveedores, registro de paises, filtro en las consultas de proveedores y productos, las clases en la capa Entity, las clases repositorios y las clases servicio, entre otras cosas

--- a/floridaimportdotnet/ClientApp/src/app/florida/producto-registro/producto-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/producto-registro/producto-registro.component.html
@@ -41,6 +41,11 @@
     </div>
   
   </div>
+  <div class="form-group">
+    <Label>Imagen</Label>
+    <br>
+    <input type="file" (change)="onSelectFile($event)"/>
+  </div>
     <div class="row">
     <div class="form-group col">
     
@@ -123,6 +128,12 @@
     
     </form>
     
+    </div>
+
+    <div class="col card border border-success cardImg">
+      <label>Imagen seleccionada:</label>
+      <br>
+      <img [src]="url" height="100">
     </div>
     
     </div>
