--- a/floridaimportdotnet/ClientApp/src/app/florida/agregar-ubicacion/agregar-ubicacion.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/agregar-ubicacion/agregar-ubicacion.component.html
@@ -4,18 +4,18 @@
     
     <div class="col-md-6 offset-md-3">
     
-    <h2 class="text-success" id="PaddingText">Registro de Clientes</h2>
+    <h2 class="text-success" id="PaddingText">Registra tu ubicacion</h2>
     
-    <form id="Padding">
+    <form [formGroup]="formGroup" id="Padding">
     
     <div class="row">
     <div class="form-group col">
     
     <label>Pais</label>
     
-    <select name="tipoPersona" class="form-control border border-success" formControlName="tipoPersona">
+    <select name="pais" class="form-control border border-success" formControlName="pais">
         
-      <option value="Paices" *ngFor="let pais of paices" selected>
+      <option value="Paises" *ngFor="let pais of paises" selected>
           {{pais.nombre}}
         </option>
   
@@ -27,8 +27,13 @@
     
       <label>Ciudad</label>
   
-      <input type="text" name="apellido" formControlName="apellido" class="form-control border border-success" 
-      placeholder="Apellido" />
+      <select name="ciudad" class="form-control border border-success" formControlName="ciudad">
+        
+        <option value="ciudad.nombre" *ngFor="let ciudad of ciudades" selected>
+            {{ciudad.nombre}}
+          </option>
+    
+      </select>
     
     </div>
   
@@ -38,8 +43,8 @@
     
       <label>Direccion</label>
       
-      <input type="text" name="identificacion" formControlName="identificacion" class="form-control border border-success" 
-      placeholder="CC"/>
+      <input type="text" name="direccion" formControlName="direccion" class="form-control border border-success" 
+      placeholder="Direccion"/>
       
       </div>
     
@@ -56,8 +61,8 @@
     
         <label>Codigo postal</label>
         
-        <input type="email" name="correo" formControlName="correo" class="form-control border border-success" 
-        placeholder="email@example.com"/>
+        <input type="text" name="codigoPostal" formControlName="codigoPostal" class="form-control border border-success" 
+        placeholder="codigo Postal"/>
         
      </div>
   
@@ -65,8 +70,8 @@
     
       <label>Telefono</label>
       <div class="input-group">
-      <input type="text" name="contrasena" formControlName="contrasena" class="form-control border border-success col" 
-      placeholder="Contraseña" />
+      <input type="text" name="telefono" formControlName="telefono" class="form-control border border-success col" 
+      placeholder="Telefono" />
       </div>
       
    </div>
