--- a/floridaimportdotnet/ClientApp/src/app/florida/pais-registro/pais-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/pais-registro/pais-registro.component.html
@@ -11,12 +11,12 @@
     
     <div class="form-group">
         <label>Pais</label>
-        <input type="text" name="nombrePais" formControlName="nombrePais" class="form-control border border-success" 
-        placeholder="Nombre del pais" [ngClass]="{ 'is-invalid': control.nombrePais.errors && formGroup.get('nombrePais').touched}"/>
+        <input autocomplete="off" type="text" name="nombre" formControlName="nombre" class="form-control border border-success" 
+        placeholder="Nombre del pais" [ngClass]="{ 'is-invalid': control.nombre.errors && formGroup.get('nombre').touched}"/>
   
-        <div *ngIf="control.nombrePais.errors" class="invalid-feedback">
+        <div *ngIf="control.nombre.errors" class="invalid-feedback">
   
-          <div *ngIf="control.nombrePais.errors.required">Se require el nombre del pais</div>
+          <div *ngIf="control.nombre.errors.required">Se require el nombre del pais</div>
   
         </div>
      </div>
@@ -24,15 +24,14 @@
      <div class="form-group">
       <label>Ciudad</label>
       <div class="input-group">
-        <input type="text" name="nombreCiudad" formControlName="nombreCiudad" class="form-control border border-success col" 
+        <input type="text" name="nombreCiudad" id="nombreCiudad" formControlName="nombreCiudad" class="form-control border border-success col" 
         placeholder="Nombre" [ngClass]="{ 'is-invalid': control.nombreCiudad.errors && formGroup.get('nombreCiudad').touched}"/>
         <div class="input-group-append">
-            <button  class="btn btn-white border border-success" (click)="addCiudad()">
-                <svg class="bi bi-plus-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M8 3.5a.5.5 0 01.5.5v4a.5.5 0 01-.5.5H4a.5.5 0 010-1h3.5V4a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
-                    <path fill-rule="evenodd" d="M7.5 8a.5.5 0 01.5-.5h4a.5.5 0 010 1H8.5V12a.5.5 0 01-1 0V8z" clip-rule="evenodd"/>
-                    <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd"/>
-                  </svg>
+            <button  class="btn btn-white border border-success text-success" (click)="addCiudad()"  [disabled]="formGroup.invalid">
+              <svg class="bi bi-plus" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M8 3.5a.5.5 0 01.5.5v4a.5.5 0 01-.5.5H4a.5.5 0 010-1h3.5V4a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+                <path fill-rule="evenodd" d="M7.5 8a.5.5 0 01.5-.5h4a.5.5 0 010 1H8.5V12a.5.5 0 01-1 0V8z" clip-rule="evenodd"/>
+              </svg>
             </button>
         </div>
         <div *ngIf="control.nombreCiudad.errors" class="invalid-feedback">
@@ -43,9 +42,9 @@
   
     <div class="text-center">
         
-    <button class="btn btn-success mr-1" >Ingresar</button>
+    <button class="btn btn-success mr-1" [disabled]="formGroup.invalid" (click)="post()">Guardar</button>
     
-    <button class="btn btn-secondary" type="reset">Cancel</button>
+    <button class="btn btn-secondary" type="reset" (click)="cancel()">Cancel</button>
     
     </div>
     
@@ -53,6 +52,39 @@
     
     </div>
     
+    <div class="card border border-success">
+      <table class="table table-striped" *ngIf='pais.ciudades && pais.ciudades.length'>
+    
+        <thead>
+        
+        <tr>
+        
+        <th scope="col">#</th>
+        
+        <th scope="col">Nombre </th>
+        
+        </tr>
+        
+        </thead>
+        
+        <tbody>
+        
+        <tr *ngFor="let ciudad of pais.ciudades; index as i ">
+        
+        <th scope="row">{{ i + 1 }}</th>
+        
+        <td>{{ ciudad.nombre }}</td>
+    
+        <td>  ver </td>
+    
+        </tr>
+        
+        </tbody>
+        
+        </table>
+    
+    </div>
+
     </div>
     
     </div>
