--- a/floridaimportdotnet/ClientApp/src/app/florida/persona-perfil/persona-perfil.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/persona-perfil/persona-perfil.component.html
@@ -47,7 +47,7 @@
           </div>
           <div *ngIf="pais==null && isEnabled==true">
             <div class="text-center">
-              <button class="btn btn-success mr-1" (click)="irAUbicacion()">Agregar ubicacion</button>
+              <a class="btn btn-success mr-1" role="button" [routerLink]="['/agregarUbicacion']">Agregar ubicacion</a>
               <button class="btn btn-success mr-1" (click)="habilitarBoton()">Editar perfil</button>
             </div>
           </div>
