--- a/floridaimportdotnet/ClientApp/src/app/florida/proveedor-registro/proveedor-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/proveedor-registro/proveedor-registro.component.html
@@ -1,1 +1,130 @@
-<p>proveedor-registro works!</p>
+<div class="container">
+
+    <div class="row">
+    
+    <div class="col-md-6 offset-md-3">
+    
+    <h2 class="text-success" id="PaddingText">Registro de proveedores</h2>
+    
+    <form [formGroup]="formGroup" id="Padding">
+    
+    <div class="row">
+    <div class="form-group col">
+    
+    <label>Nombre / Razon social</label>
+    
+    <input type="text" name="nombre" formControlName="nombre" class="form-control border border-success" 
+    placeholder="Nombre" [ngClass]="{ 'is-invalid': control.nombre.errors && formGroup.get('nombre').touched}"
+  
+    />
+    
+    <div *ngIf="control.nombre.errors" class="invalid-feedback">
+  
+      <div *ngIf="control.nombre.errors.required">Se require el nombre</div>
+      
+    </div>
+    </div>
+    
+    <div class="form-group col">
+    
+        <label>Identificacion / NIT</label>
+        
+        <input type="text" name="identificacion" formControlName="identificacion" class="form-control border border-success" 
+        placeholder="Identificacion / NIT" [ngClass]="{ 'is-invalid': control.identificacion.errors && formGroup.get('identificacion').touched}"/>
+      
+        <div *ngIf="control.identificacion.errors" class="invalid-feedback">
+      
+            <div *ngIf="control.identificacion.errors.required">Se require identificacion</div>
+            
+          </div>
+        
+        </div>
+  
+  </div>
+    <div class="row">
+    
+        <div class="form-group col">
+    
+            <label>Descripcion</label>
+        
+            <textarea type="text" name="descripcion" formControlName="descripcion" class="form-control border border-success" 
+            placeholder="Descripcion..." [ngClass]="{ 'is-invalid': control.descripcion.errors && formGroup.get('descripcion').touched}"></textarea>
+        
+            <div *ngIf="control.descripcion.errors" class="invalid-feedback">
+        
+              <div *ngIf="control.descripcion.errors.required">Se require la descripcion</div>
+              
+            </div>
+          
+          </div>
+  </div>
+    
+    <div class="form-group">
+    
+        <label>Correo</label>
+        
+        <input type="email" name="correo" formControlName="correo" class="form-control border border-success" 
+        placeholder="email@example.com" [ngClass]="{ 'is-invalid': control.correo.errors && formGroup.get('correo').touched}"/>
+  
+          <div *ngIf="control.correo.errors" class="invalid-feedback">
+  
+            <div *ngIf="control.correo.errors.required">Se require el correo</div>
+            <div *ngIf="control.correo.errors.email">{{control.correo.value}} No corresponde a un correo electronico. Por favor, 
+              asegurese de digitar bien su correo.</div>
+  
+          </div>
+        
+     </div>
+  
+     <div class="form-group">
+    
+      <label>Contraseña</label>
+      <div class="input-group">
+      <input type="{{tipo}}" name="contrasena" formControlName="contrasena" class="form-control border border-success col" 
+      placeholder="Contraseña" [ngClass]="{ 'is-invalid': control.contrasena.errors && formGroup.get('contrasena').touched}"/>
+      <div class="input-group-append">
+      <button class="btn btn-white border border-success" width="1em" height="1.5em" (click)="ver()">
+        <div *ngIf="verCon==false">
+          <svg class="bi bi-eye" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.134 13.134 0 001.66 2.043C4.12 11.332 5.88 12.5 8 12.5c2.12 0 3.879-1.168 5.168-2.457A13.134 13.134 0 0014.828 8a13.133 13.133 0 00-1.66-2.043C11.879 4.668 10.119 3.5 8 3.5c-2.12 0-3.879 1.168-5.168 2.457A13.133 13.133 0 001.172 8z" clip-rule="evenodd"/>
+            <path fill-rule="evenodd" d="M8 5.5a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM4.5 8a3.5 3.5 0 117 0 3.5 3.5 0 01-7 0z" clip-rule="evenodd"/>
+          </svg>
+        </div>
+        <div *ngIf="verCon==true">
+          <svg class="bi bi-eye-slash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.359 11.238C15.06 9.72 16 8 16 8s-3-5.5-8-5.5a7.028 7.028 0 00-2.79.588l.77.771A5.944 5.944 0 018 3.5c2.12 0 3.879 1.168 5.168 2.457A13.134 13.134 0 0114.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755-.165.165-.337.328-.517.486l.708.709z"/>
+            <path d="M11.297 9.176a3.5 3.5 0 00-4.474-4.474l.823.823a2.5 2.5 0 012.829 2.829l.822.822zm-2.943 1.299l.822.822a3.5 3.5 0 01-4.474-4.474l.823.823a2.5 2.5 0 002.829 2.829z"/>
+            <path d="M3.35 5.47c-.18.16-.353.322-.518.487A13.134 13.134 0 001.172 8l.195.288c.335.48.83 1.12 1.465 1.755C4.121 11.332 5.881 12.5 8 12.5c.716 0 1.39-.133 2.02-.36l.77.772A7.029 7.029 0 018 13.5C3 13.5 0 8 0 8s.939-1.721 2.641-3.238l.708.709z"/>
+            <path fill-rule="evenodd" d="M13.646 14.354l-12-12 .708-.708 12 12-.708.708z" clip-rule="evenodd"/>
+          </svg>
+        </div>
+      </button>
+      </div>
+      <div *ngIf="control.contrasena.errors" class="invalid-feedback">
+        <div *ngIf="control.contrasena.errors.required">Se require la contraseña</div>
+        <div *ngIf="control.contrasena.errors.minlength">La contraseña debe contener minimo 8 caracteres</div>
+        <div *ngIf="control.contrasena.errors.maxlength">La contraseña debe contener maximo 20 caracteres</div>
+      </div>
+      </div>
+      
+   </div>
+  
+    <div class="text-center">
+        
+    <button class="btn btn-success mr-1"(click)="onSubmit()" [disabled]="formGroup.invalid">Registrar</button>
+    
+    <button class="btn btn-secondary" type="reset">Cancel</button>
+    
+    </div>
+    
+    </form>
+    
+    </div>
+    
+    </div>
+    
+    </div>
+  
+    <footer class="container">
+      <p>&copy; Company 2017-2019</p>
+    </footer>
