--- a/floridaimportdotnet/ClientApp/src/app/home/home.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/home/home.component.html
@@ -47,67 +47,61 @@
 <div class="container Padding">
   <!-- Example row of columns -->
   <a name="productos">
-  <div *ngIf='productos && productos.length'>
     <h2 class="text-success">Frutas</h2>
     <hr style="color: black;"/>
   <div class="row">
-    <div class="col-md-4" *ngFor="let producto of productos; index as i " >
-    <div *ngIf="producto.tipo=='Fruta'">
+    <div class="col-md-4" *ngFor="let fruta of frutas; index as i " >
       <svg class="bi bi-card-image justify-content-center" width="5em" height="5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 00-.5.5v9a.5.5 0 00.5.5h13a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5zm-13-1A1.5 1.5 0 000 3.5v9A1.5 1.5 0 001.5 14h13a1.5 1.5 0 001.5-1.5v-9A1.5 1.5 0 0014.5 2h-13z" clip-rule="evenodd"/>
         <path d="M10.648 7.646a.5.5 0 01.577-.093L15.002 9.5V13h-14v-1l2.646-2.354a.5.5 0 01.63-.062l2.66 1.773 3.71-3.71z"/>
         <path fill-rule="evenodd" d="M4.502 7a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" clip-rule="evenodd"/>
       </svg>
-      <h3 >{{producto.nombre}}</h3>
-      <p>{{producto.descripcion}}</p>
-      <p>{{producto.precio | currency: ' COP ' :true:'1.1-2'}}</p>
+      <h3 >{{fruta.nombre}}</h3>
+      <p>{{fruta.descripcion}}</p>
+      <p>{{fruta.precio | currency: ' COP ' :true:'1.1-2'}}</p>
       <div class="btn-group" role="group">
         <p><a type="button" class="btn btn-secondary" [routerLink]="['/nosotrosConsulta']" role="button">Comprar &raquo;</a></p>
         <p><a type="button" class="btn btn-secondary" [routerLink]="['/nosotrosConsulta']" role="button">Agregar &raquo;</a></p>
         </div>
     </div>
-    </div>
   </div>
   <h2 class="Padding text-success" >Verduras</h2>
   <hr style="color: black;"/>
   <div class="row">
-    <div class="col-md-4" *ngFor="let producto of productos; index as i " >
-    <div *ngIf="producto.tipo=='Verdura'">
+    <div class="col-md-4" *ngFor="let verdura of verduras; index as i " >
       <svg class="bi bi-card-image justify-content-center" width="5em" height="5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 00-.5.5v9a.5.5 0 00.5.5h13a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5zm-13-1A1.5 1.5 0 000 3.5v9A1.5 1.5 0 001.5 14h13a1.5 1.5 0 001.5-1.5v-9A1.5 1.5 0 0014.5 2h-13z" clip-rule="evenodd"/>
         <path d="M10.648 7.646a.5.5 0 01.577-.093L15.002 9.5V13h-14v-1l2.646-2.354a.5.5 0 01.63-.062l2.66 1.773 3.71-3.71z"/>
         <path fill-rule="evenodd" d="M4.502 7a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" clip-rule="evenodd"/>
       </svg>
-      <h3>{{producto.nombre}}</h3>
-      <p>{{producto.descripcion}}</p>
-      <p>{{producto.precio | currency: ' COP ' :true:'1.1-2'}}</p>
+      <h3>{{verdura.nombre}}</h3>
+      <p>{{verdura.descripcion}}</p>
+      <p>{{verdura.precio | currency: ' COP ' :true:'1.1-2'}}</p>
       <div class="btn-group" role="group">
         <p ><a class="btn btn-secondary" [routerLink]="['/nosotrosConsulta']" role="button">Comprar &raquo;</a></p>
         <p ><a class="btn btn-secondary" [routerLink]="['/nosotrosConsulta']" role="button">Agregar &raquo;</a></p>
         </div>
     </div>
-    </div>
   </div>
   <h2 class="Padding text-success">Hortalizas</h2>
   <hr style="color: black;"/>
   <div class="row">
-    <div class="col-md-4" *ngFor="let producto of productos; index as i " >
-    <div *ngIf="producto.tipo=='Hortaliza'">
+    <div class="col-md-4" *ngFor="let hortaliza of hortalizas; index as i " >
       <svg class="bi bi-card-image justify-content-center" width="5em" height="5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 00-.5.5v9a.5.5 0 00.5.5h13a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5zm-13-1A1.5 1.5 0 000 3.5v9A1.5 1.5 0 001.5 14h13a1.5 1.5 0 001.5-1.5v-9A1.5 1.5 0 0014.5 2h-13z" clip-rule="evenodd"/>
         <path d="M10.648 7.646a.5.5 0 01.577-.093L15.002 9.5V13h-14v-1l2.646-2.354a.5.5 0 01.63-.062l2.66 1.773 3.71-3.71z"/>
         <path fill-rule="evenodd" d="M4.502 7a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" clip-rule="evenodd"/>
       </svg>
-      <h3>{{producto.nombre}}</h3>
-      <p>{{producto.descripcion}}</p>
-      <p>{{producto.precio | currency: ' COP ' :true:'1.1-2'}}</p>
+      <h3>{{hortaliza.nombre}}</h3>
+      <p>{{hortaliza.descripcion}}</p>
+      <p>{{hortaliza.precio | currency: ' COP ' :true:'1.1-2'}}</p>
       <div class="btn-group" role="group">
       <p ><a class="btn btn-secondary" [routerLink]="['/nosotrosConsulta']" role="button">Comprar &raquo;</a></p>
-      <p ><a class="btn btn-secondary" [routerLink]="['/nosotrosConsulta']" role="button">Agregar &raquo;</a></p>
+      <p ><button class="btn btn-secondary" role="button" (click)="agregar()">Agregar &raquo; 
+      </button>
+    </p>
       </div>
     </div>
-    </div>
-  </div>
   </div>
   </a>
   <hr>
